
(executable
  (name trs_prof)               ; The name of your entry file, minus the .ml
  (libraries tracking_bigraph landmarks )          ; Express a dependency on the 'lib' module
  (modes (native exe) )             ; Tryb budowania programu exe to native byte to byte
  (preprocess (pps landmarks.ppx))
) 
